fixed resume margins to make easier to read on mobile

--- a/styleSheets/resume.css
+++ b/styleSheets/resume.css
@@ -1,11 +1,7 @@
-html, body {
-	margin: 2vw;
-}
-
 .pageFont {
   text-decoration: none;
   font-family: "Work Sans", sans-serif;
-  color: #17252A;
+  color: white;
 	text-align: left;
 }
 
@@ -25,6 +21,10 @@ html, body {
 }
 
 @media only screen and (min-width: 769px){
+	html, body {
+		margin: 2vw;
+	}
+
 	#mobileStage {
 		display: none;
 	}
@@ -38,10 +38,15 @@ html, body {
 }
 
 @media only screen and (max-width: 768px){
+	html, body {
+		margin: 7vw 2vw 2vw 2vw;
+		background-color: black;
+	}
+	.container-fluid{
+		background-color: black;
+	}
+
 	#desktopStage {
 		display: none;
-	}
-	body {
-		margin-top: 7vw;
 	}
 }
